<resources>
    <string name="app_name" translatable="false">Minecraft PMDP Edition</string>
    <string name="email_hint" translatable="false">email@example.com</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="logo_description" translatable="false">Minecraft PMDM Edition Deluxe HD</string>
    <string name="toast_bad_user_password">Your username or password are incorrect.</string>
    <string name="toast_login_error">Failed to login.</string>
    <string name="name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string-array name="arr_paises">
        <item>Spain</item>
        <item>France</item>
        <item>United kingdom</item>
        <item>Japan</item>
        <item>Italy</item>
    </string-array>
    <string name="cancel_button">Cancel</string>
    <string name="toast_register_success">Register completed</string>
    <string name="toast_register_cancel">Register canceled</string>
    <string name="toast_register_empty_field">Complete all the fields</string>
    <string name="toast_register_bad_password">Passwords are not the same</string>
    <string name="toast_register_error">Register failed, try again later</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_menu_logout">Logout</string>
    <string name="toast_logout_success">Thanks for using the App</string>
    <string name="main_menu_profile">Profile</string>
    <string name="bottom_menu_blocks">Blocks</string>
    <string name="bottom_menu_mobs" translatable="false">Mobs</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="profile_load_iamge_fail">Failed to load profile image</string>
    <string name="profile_cancel_changes">Canceled</string>
    <string name="profile_update_success">Profile info succesfully updated</string>
    <string name="profile_update_fail">Failed to update profile info</string>
    <string name="nationality_hint">Nationality</string>
    <string name="profile_activity_name">Profile</string>
    <string name="bottom_menu_home">Home</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut elementum velit, eu molestie dolor. Cras non dignissim mi, ut sagittis urna. Proin dui justo, tincidunt vel velit at, pretium varius arcu. Pellentesque efficitur lectus vel leo luctus pulvinar. Donec eget erat ante. Vestibulum eu semper lorem. Vivamus a libero sit amet purus pretium placerat at vel tellus. Maecenas ex augue, pharetra eu euismod ac, pulvinar sit amet metus. Nulla et semper leo. Aenean aliquam, dui bibendum finibus tincidunt, turpis ligula molestie dui, eget dignissim metus nulla ut velit. Maecenas dapibus velit urna, ut cursus mi aliquam quis. Nulla sed ante a risus feugiat volutpat in non magna.</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="delete_acc_alert_title">Delete Account</string>
    <string name="delete_acc_alert_message">Are you sure you want to delete your account? You will return to the login screen</string>
    <string name="delete_acc_alert_neg_button">Cancel</string>
    <string name="delete_acc_alert_pos_button">Delete</string>
    <string name="account_deleted">Account deleted</string>
</resources>
